# rapid-labs

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml
apps/rapid-rsc/: README.MD
apps/rapid-ssr/api/: main.rs  polyfill.rs  ssr.rs
apps/rapid-ssr/web/: .prettierrc.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
apps/rapid-ssr/web/src/: entry-server.tsx
apps/rapid-ssr/web/src/abstractions/: app.tsx
apps/rapid-ssr/web/src/pages/: test.tsx
apps/rapid-ssr/web/src/storybook/stories/: Button.stories.js  Header.stories.js  Page.stories.js
scripts/: test.rs
web/: index.html  vite.config.ts  webpack.ssr.js
web/plugin/: unplugin.mjs
web/src/: entry-client.tsx  router.tsx
web/src/abstractions/: client_only.ts
web/src/pages/: index.tsx
