# Registered binaries
[[bin]]
name = "cv_scaffold"
path = "api/main.rs"

[[bin]]
name = "test"
path = "scripts/test.rs"

[[bin]]
name = "test2"
path = "api/test.rs"

[lib]
name = "test_loader"
path = "web/src/pages/test_loader.rs"


[package]
name = "cv_scaffold" # by default cargo will build the binary with the same name as "cv_scaffold"
default-run = "cv_scaffold" # Having this here ensures that we run the main.rs binary by default
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web  = { version = "4.2.1", features = [] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
actix-cors = "0.6.4"
futures = "0.3.25"
v8 = "0.63.0"
lazy_static = "1.4.0"
rapid-web = "0.1.4"
